Fix invalid style rule making fonts too small

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,6 @@
 @import "reset";
 
-::root {
+:root {
   font-size: 18px;
 }
 
